<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="3dp"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    tools:ignore="ContentDescription, UnusedAttribute">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/padding_8">

        <ImageButton
            android:id="@+id/btn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/item_selector"
            app:srcCompat="@drawable/ic_more" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/icon_profile" />

        <TextView
            android:id="@+id/tv_namepro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_toEndOf="@id/iv_profile"
            android:layout_toRightOf="@id/iv_profile"
            android:fontFamily="@font/googlesans_medium"
            android:text="@string/txt_name_profile"
            android:textSize="@dimen/font_size_14"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_namepro"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_toEndOf="@id/iv_profile"
            android:layout_toRightOf="@id/iv_profile"
            android:fontFamily="@font/googlesans_regular"
            android:text="@string/txt_date_time"
            android:textSize="@dimen/font_size_12" />

        <LinearLayout
            android:id="@+id/ll_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_profile"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_status"
                android:autoLink="web"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/txt_status"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_comment"
                android:textSize="@dimen/font_size_12"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_status"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/item_selector"
                app:srcCompat="@drawable/ic_favorite" />

            <ImageButton
                android:id="@+id/btn_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/item_selector"
                app:srcCompat="@drawable/ic_comment" />

        </LinearLayout>


    </RelativeLayout>


</android.support.v7.widget.CardView>